webadmin script and scene working

--- a/webadmin/css/ledapp.css
+++ b/webadmin/css/ledapp.css
@@ -551,8 +551,11 @@ footer h1 {
   margin-right: 2rem;
   white-space: nowrap;
 }
+.strip-list .items .item input + span {
+  margin-left: 4px;
+}
 
-.strip-list a {
+.strip-list a, .script-select a {
   color: #000000;
   border: 1px solid #444444;
   padding: 4px;
@@ -561,6 +564,7 @@ footer h1 {
   display: inline-block;
   min-width: 8ch;
   text-align: center;
+  border-radius: 4px;
 }
 
 .slider {
