--- a/webadmin/html/component/scene.html
+++ b/webadmin/html/component/scene.html
@@ -1,9 +1,12 @@
 
 
+<script type="text/html" id="scene-button">
+    <button class="scene-select"></button>    
+</script>
 
 <div class='scene-controls'>
-    <button class='scene-select scene-christmas' data-script='v-day'>Valentine's Day</button>
-    <button class='scene-select scene-rainbow' data-script='rainbow'>Rainbow</button>
+    <span class="buttons">
+    </span>
     <button class='scene-off'>Off</button>
 
 </div>
