--- a/webadmin/html/component/script.html
+++ b/webadmin/html/component/script.html
@@ -7,7 +7,7 @@
 
     <div class='script'>
         <div class="page-state select">
-            <div>
+            <div class="script-select">
                 <a href='#sel-all' class="check-all" data-checked='true' data-target=".script-list">all</a> 
                 <a href='#sel-none'  class="check-all" data-target=".script-list"  data-checked='false' >none</a>
                 <a  class="refresh-scripts"  >refresh</a>
