--- a/webadmin/html/component/script.html
+++ b/webadmin/html/component/script.html
@@ -17,16 +17,16 @@
             </div>
         </div>
         <div class='buttons'>
-            <button class='run-script'>Run</button>
-            <button class='save-script'>Save</button>
+            <button class='run-script if-no-error'>Run</button>
+            <button class='save-script if-no-error'>Save</button>
             <button class='load-script'>Reload</button>
             <button class='delete-script'>Delete</button>
-            <button class='copy-script'>Copy</button>
+            <button class='copy-script if-no-error'>Copy</button>
         </div>
 
         <div class="single-script" style="display:none">
     
-            <label>Name: <input name='name'/></label>
+            <label>File: <input name='name'/></label>
     
             <textarea id='script-text'>
     
