webadmin bug fixes

--- a/webadmin/html/component/strips.html
+++ b/webadmin/html/component/strips.html
@@ -1,5 +1,5 @@
 <script type='text/html' id='strip-item'>
-    <div class='item' ">
+    <div class='strip item' >
         <label><input type='checkbox' /><span class='name'>name</span></label>
     </div>
 </script>
