--- a/webadmin/css/ledapp.css
+++ b/webadmin/css/ledapp.css
@@ -555,6 +555,11 @@ footer h1 {
   margin-left: 4px;
 }
 
+.strip.item.offline {
+  color: #aa0000;
+  text-decoration: line-through;
+}
+
 .strip-list a, .script-select a {
   color: #000000;
   border: 1px solid #444444;
@@ -731,16 +736,24 @@ button {
   position: fixed;
   max-width: 75%;
   min-width: 15em;
-  bottom: 0;
-  right: 0;
+  bottom: -4;
+  right: -4;
   background-color: #aaffaa;
   color: #444444;
   border: 4px solid #aaaaaa;
-  box-shadow: #e50050;
+  box-shadow: #e50050 2 2;
   padding: 8px;
 }
 .notifications .error {
   background-color: #ffaaaa;
   padding: 2px;
   font-weight: bold;
+}
+.notifications .notice {
+  opacity: 1;
+  transition: 3000ms opacity ease-in;
+}
+.notifications .notice.fade-out {
+  opacity: 0.3;
+  transition: 3000ms opacity ease-in;
 }/*# sourceMappingURL=ledapp.css.map */
