--- a/webadmin/css/ledapp.scss
+++ b/webadmin/css/ledapp.scss
@@ -569,6 +569,11 @@
       }
   }
 
+  .strip.item.offline {
+    color: #aa0000;
+    text-decoration: line-through;
+  }
+
   .strip-list a, .script-select a {
       color: #000000;
       border: 1px solid #444444;
@@ -753,16 +758,27 @@
     position: fixed;
     max-width: 75%;
     min-width: 15em;
-    bottom: 0;
-    right: 0;
+    bottom: -4;
+    right: -4;
     background-color: #aaffaa;
     color: #444444;
     border: 4px solid #aaaaaa;
-    box-shadow: #e50050;
+    box-shadow: #e50050 2 2;
     padding: 8px;
     .error {
       background-color: #ffaaaa;
       padding: 2px;
       font-weight: bold;
     }
+
+    .notice {
+      opacity: 1;
+      transition:  3000ms opacity ease-in;
+    }
+    
+    .notice.fade-out {
+      opacity: 0.3;
+      transition:  3000ms  opacity ease-in;
+    }
   }
+
