--- a/webadmin/html/component/header.html
+++ b/webadmin/html/component/header.html
@@ -1,5 +1,5 @@
 <div>
-<h1><a id='reload-page'>LEDs</a></h1>
+<h1><a id='reload-page'><div>DR</div>LEDs</a></h1>
 <nav id='main-nav'>
     <ul>
         <li><a href='#white'>White</a></li>
@@ -7,7 +7,7 @@
         <li><a href='#scene'>Scene</a></li>
         <li><a href='#scripts'>Scripts</a></li>
         <li><a href='#config'>Config</a></li>
-        <li><a id='toggle-log' class='off'>log</a></li>
+        <!--<li><a id='toggle-log' class='off'>log</a></li>-->
         </ul>
 </nav>
 
