--- a/webadmin/css/ledapp.scss
+++ b/webadmin/css/ledapp.scss
@@ -524,14 +524,17 @@
     font-size: 4vw;
   }
 
-  #main-nav a.active {
-    text-align: center;
-}
+  #main-nav {
+    background-color: #dddddd;
+      a {
+        padding: 4px;
+      }
+     a.active {
 
-  #main-nav a.active {
-    background-color: rgb(81, 143, 81);
-    color: #ffffff;
+      background-color: rgb(81, 143, 81);
+      color: #ffffff;
 
+    }
   }
 
   #main-content > div {
@@ -782,3 +785,9 @@
     }
   }
 
+option:disabled {
+  color: red;
+  text-decoration: line-through;
+  font-size: smaller;
+  
+}
