--- a/webadmin/css/ledapp.css
+++ b/webadmin/css/ledapp.css
@@ -740,7 +740,7 @@ button {
   min-width: 15em;
   bottom: -4;
   right: -4;
-  background-color: #aaffaa;
+  background-color: #44aa44;
   color: #444444;
   border: 4px solid #aaaaaa;
   box-shadow: #e50050 2 2;
