--- a/webadmin/css/ledapp.scss
+++ b/webadmin/css/ledapp.scss
@@ -763,7 +763,7 @@
     min-width: 15em;
     bottom: -4;
     right: -4;
-    background-color: #aaffaa;
+    background-color: #44aa44;
     color: #444444;
     border: 4px solid #aaaaaa;
     box-shadow: #e50050 2 2;
@@ -789,5 +789,5 @@ option:disabled {
   color: red;
   text-decoration: line-through;
   font-size: smaller;
-  
+
 }
